--- a/js-basics-exercises/index.html
+++ b/js-basics-exercises/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Challenges</h1>
-    <script src="./challenges/03-numbers.js"></script>
+    <script src="./challenges/04-arrays.js"></script>
     
 </html>
