--- a/js-basics-exercises/index.html
+++ b/js-basics-exercises/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Challenges</h1>
-    <script src="./challenges/05-functions.js"></script>
+    <script src="./challenges/06-objects.js"></script>
     
 </html>
